# -cpl

./: CMakeLists.txt  README.md
homework/7.pointers/: BigTitle.c  interpreter.c  substr.c
lesson/10.struct,union,enum/: structure1.c
lesson/11.linked list/: josephus(linked list).c  josephus.c
lesson/7.pointers/: ex1.cpp  malloc+.c  malloc.c  malloc2.c  management.cpp  pointer.c  reminder.c  selectsort.c  test.c  test1.c  testheapmax.c
lesson/8.pointers&string/: array pointers.c  hello world.c  selectionsort.c  sizeof.c  str_literature.cpp  strcat.c  strcmp.c  strcpy(why).c  strcpy.c  string.h  strlen(why).c  strlen.c
lesson/9.doublepointers/: doublepointers1.c  test.cpp
